# secexit

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  RELEASE.md  example-policy.json  rust-toolchain.toml
.github/workflows/: build-binary.yaml  ci.yaml  publish-crates.yml
packaging/: secexit-daemon.service  secexit.spec
secexit-common/: Cargo.toml
secexit-common/src/: lib.rs
secexit-daemon/: Cargo.toml
secexit-daemon/src/: main.rs  tests.rs
secexit-ebpf/: Cargo.toml
secexit-ebpf/src/: bindings.rs  main.rs
secexit-shim/: Cargo.toml
secexit-shim/src/: lib.rs  tests.rs
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
