[package]
name = "secexit-daemon"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Egress control daemon using eBPF."
repository = "https://github.com/secexit/secexit"
homepage = "https://github.com/secexit/secexit"
readme = "../README.md"
keywords = ["ebpf", "security", "egress", "firewall"]
categories = ["network-programming", "os::linux-apis"]

[dependencies]
secexit-common = { path = "../secexit-common", version = "0.1.0" }
aya = { workspace = true }
aya-log = { workspace = true }
tokio = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
libc = { workspace = true }
clap = { workspace = true }

async-trait = "0.1.89"
