[package]
name = "secexit-ebpf"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "eBPF program for secexit egress filtering."
repository = "https://github.com/secexit/secexit"
homepage = "https://github.com/secexit/secexit"
readme = "../README.md"
publish = false

[dependencies]
aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }