[package]
name = "secexit-shim"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] # Important: Makes it a .so file

[dependencies]
secexit-common = { workspace = true }
libc = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
lazy_static = "1.4"
tokio = { workspace = true }
